--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
 <html>
+<head>
+    <link rel="icon" type="image/png" href="dennison.png"/>
+    <link rel ="stylesheet" type = "text/css" href = "stylesheet.css" />
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js" type="text/javascript"></script>
+</head>
 <body>
 <div class="product-hero">
 
@@ -10,7 +17,6 @@
         </div>
       </div>
 
-</body>
 <script>
 $(".product-hero").mousemove(getMousePosition);
 
@@ -44,44 +50,5 @@ $(".product-hero").mousemove(getMousePosition);
     $('.product-hero-image').css('z-index', '0');
 
 </script>
+</body>
 </html>
-
-
-<style> 
-.product-hero
-  height 100vh
-  position relative
-
-  .product-hero-image
-    position absolute
-    height 83%
-    margin auto
-    top 3%
-    left 50%
-    transform translateX(-50%)
-    opacity 1
-    display block
-
-    &.active
-      opacity 1
-
-  .title-container
-    max-width $max_width
-    margin 0 auto
-    height 100%
-    position relative
-
-  h1
-    z-index 1000
-    position absolute
-    bottom 30%
-    left $padding
-    width 40%
-    margin 0 auto
-    text-align left
-    font-size 3.6rem
-    text-transform uppercase
-    color $main_text_colour
-    transition transform 2000ms
-    transform translate3d(0,0,0)
-</style>
