--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenLite.min.js" integrity="sha512-/8phkpsAzxsbuX18zNkQ2gCq4Q5JsWoPo1jHLDeZorPUHRtx9YJxpdk+os05oDhPJVCNzA2/NMl4rmJyQ+6Fvg==" crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="product-hero">
@@ -17,6 +18,7 @@
       </div>
 
 <script>
+
 $(".product-hero").mousemove(getMousePosition);
 
     function getMousePosition(event) {
@@ -47,6 +49,18 @@ $(".product-hero").mousemove(getMousePosition);
     }
 
     $('.product-hero-image').css('z-index', '0');
+
+
+
+// parallax effect
+$.fn.parallax = function (resistance, mouse) {
+	$el = $(this);
+	TweenLite.to($el, 0.2, {
+		x: -((mouse.clientX - window.innerWidth / 2) / resistance),
+		y: -((mouse.clientY - window.innerHeight / 2) / resistance)
+	});
+};
+
 
 </script>
 </body>
